@@ -159,13 +159,30 @@ int ObjectMoleculeCheckFullStateSelection(ObjectMolecule * I, int sele, int stat
  */
 static char *ObjectMoleculeGetCaption(ObjectMolecule * I, char* ch, int len)
 {
-  int state = ObjectGetCurrentState((CObject *) I, false);
-  int counter_mode = SettingGet_i(I->Obj.G, I->Obj.Setting, NULL, cSetting_state_counter_mode);
-
+  int objState;
   int n = 0;
-  /* TODO: get these from settings */
   int show_state = 0;
   int show_as_fraction = 0;
+  char *frozen_str = "";
+
+  int state = ObjectGetCurrentState((CObject *) I, false);
+  int counter_mode = SettingGet_i(I->Obj.G, I->Obj.Setting, NULL, cSetting_state_counter_mode);
+  int frozen = SettingGetIfDefined_i(I->Obj.G, I->Obj.Setting, cSetting_state, &objState);
+
+  /* if frozen print (blue) STATE / NSTATES
+   * if not frozen, print STATE/NSTATES
+   * if beyond NSTATES, print * /NSTATES.
+   */
+
+  if(frozen) { /* frozen color */
+    frozen_str = "\\789";
+  } else {
+    if(state+1>I->NCSet) { /* beyond this object's number of states */
+      frozen_str = "--";
+    } else { /* normal case */
+      frozen_str = "";
+    }
+  }
 
   switch(counter_mode) {
   case 0: /* off */
@@ -187,28 +204,38 @@ static char *ObjectMoleculeGetCaption(ObjectMolecule * I, char* ch, int len)
     return NULL;
 
   /* if the state is valid, setup the label */
-  if((state >= 0) && (state < I->NCSet)) {
-    CoordSet *cs = I->CSet[state];
-    if(cs) {
-      if(show_state) {
-	if (show_as_fraction) {
-	  if (cs->Name && strlen(cs->Name)) { 	  /* NAME */
-	    n = snprintf(ch, len, "%s %d/%d", cs->Name, state+1, I->NCSet);
-	  } 
-	  else { /* no name */
-	    n = snprintf(ch, len, "%d/%d", state+1, I->NCSet);
+  if(state >= 0) {
+    if (state < I->NCSet) {
+      CoordSet *cs = I->CSet[state];
+      if(cs) {
+	if(show_state) {
+	  if (show_as_fraction) {
+	    if (cs->Name && strlen(cs->Name)) { 	  /* NAME */
+	      n = snprintf(ch, len, "%s %s%d/%d", cs->Name, frozen_str, state+1, I->NCSet);
+	    } 
+	    else { /* no name */
+	      n = snprintf(ch, len, "%s%d/%d", frozen_str, state+1, I->NCSet);
+	    }
+	  } else { /* not fraction */
+	    if (cs->Name && strlen(cs->Name)) {
+	      n = snprintf(ch, len, "%s %s%d", cs->Name, frozen_str, state+1);
+	    } else { /* no name */
+	      n = snprintf(ch, len, "%s%d", frozen_str, state+1);
+	    }
 	  }
-	} else { /* not fraction */
-	  if (cs->Name && strlen(cs->Name)) {
-	    n = snprintf(ch, len, "%s %d", cs->Name, state+1);
-	  } else { /* no name */
-	    n = snprintf(ch, len, "%d", state+1);
-	  }
-	}
-      } else { /* no state */
+	} else { /* no state */
 	  n = snprintf(ch, len, "%s", cs->Name);
+	}
+      } 
+    } else { /* state > NCSet, out of range due to other object or global setting */
+      if(show_state) {
+	if(show_as_fraction) {
+	  n = snprintf(ch, len, "%s/%d", frozen_str, I->NCSet);
+	} else { /* no fraction */
+	  n = snprintf(ch, len, "%s", frozen_str);
+	}
       }
-    }	
+    }
 
     if(n>len)
       return NULL;
